<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.personalnotes.dto.NoteModel" />

        <variable
            name="viewModel"
            type="com.example.personalnotes.databinding.NoteDetailViewModel" />

        <variable
            name="confirmationCallback"
            type="com.example.personalnotes.ui.fragments.NoteDeleteConfirmationFragment.ConfirmedCallback" />

        <variable
            name="cancelledCallback"
            type="com.example.personalnotes.ui.fragments.NoteDeleteConfirmationFragment.CancelledCallback" />
    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".MainActivity"
        tools:ignore="MergeRootFrame">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/collapsing_image_height"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:collapsedTitleGravity="center"
                app:collapsedTitleTextAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:title="@string/note_delete_confirmation"
                app:toolbarId="@id/toolbar">

                <ImageView
                    android:id="@+id/detail_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/collapsing_image_height"
                    android:contentDescription="@string/notes_list_toolbar_description"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/note_delete"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    style="@style/Widget.MaterialComponents.Toolbar.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:layout_collapseMode="pin" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/are_you_sure_to_delete_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/margin_normal"
                    android:text="@string/note_deletion_long_warning"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/card_side_margin"
                    android:layout_marginEnd="@dimen/card_side_margin"
                    android:layout_marginBottom="@dimen/card_bottom_margin"
                    app:cardElevation="@dimen/card_elevation"
                    app:cardPreventCornerOverlap="false"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.RoundedCard">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/id_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@{viewModel.noteId}"
                            android:textAppearance="?attr/textAppearanceHeadline5"
                            app:layout_constraintBottom_toTopOf="@id/note_detail_name"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:text="#2" />

                        <TextView
                            android:id="@+id/note_detail_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_small"
                            android:layout_marginEnd="@dimen/margin_small"
                            android:text="@={viewModel.note.title}"
                            android:textAppearance="?attr/textAppearanceHeadline5"
                            app:layout_anchor="@id/id_text"
                            app:layout_constraintTop_toBottomOf="@id/id_text"
                            tools:text="Apple" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_bottom_margin"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/delete_confirm_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{()->confirmationCallback.confirm()}"
                        android:text="@string/delete_button_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/back_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{()->cancelledCallback.cancel()}"
                        android:text="@string/cancel_deletion_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>

