...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:clipToPadding="false"
            >
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/create_note_card"
                android:layout_width="match_parent"
                android:layout_height="800dp"
                android:layout_marginStart="@dimen/card_side_margin"
                android:layout_marginEnd="@dimen/card_side_margin"
                android:layout_marginBottom="@dimen/card_bottom_margin"
                app:cardElevation="@dimen/card_elevation"
...
                        android:textAppearance="?attr/textAppearanceHeadline5"
                        app:layout_anchor="@id/id_text"
                        app:layout_constraintTop_toBottomOf="@id/id_text"
                        tools:text="Apple" />

                    <ImageButton
                        android:id="@+id/button_discard_draft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/margin_normal"
                        android:contentDescription="@string/discard_draft_description"
                        android:src="@android:drawable/ic_delete"
...
