...
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:theme="@style/AppTheme.PersonalNotes.NoActionBar"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/note_detail_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                app:cardElevation="@dimen/card_elevation"
                app:cardPreventCornerOverlap="false"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.RoundedCard">
...
                        android:textAppearance="?attr/textAppearanceHeadline5"
                        app:layout_anchor="@id/id_text"
                        app:layout_constraintTop_toBottomOf="@id/id_text"
                        tools:text="Apple" />

                    <Button
                        android:id="@+id/delete_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:onClick="@{()->deleteCallback.delete()}"
                        android:text="@string/delete_button_text" />
                </LinearLayout>
...
